@@ -98,3 +98,4 @@
 - Can now travel on free charter boats without having money in inventory
 - Emerald and diamond bracelet enchants no longer produce noted items
 - Prevent furnace temperature from going negative and deduplicate bar handling.
+- Fix player saves for players who used coal on the conveyer belt before bf-fixes.
